tests/models/struct/named/vec/fail/le.rs
use dade::model;
#[model]
struct TestModel {
    #[field(le = 2)]
    value: Vec<()>,
}
fn main() {}
