tests/models/struct/named/vec/fail/le.stderr
error: Support condition is min_items, max_items, alias and validate
 --> tests/models/struct/named/vec/fail/le.rs:5:5
  |
5 |     value: Vec<()>,
  |     ^^^^^
